--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 							<article class="post featured">
 								<header class="major">
 									<span class="date"><h3>我的联络方式</h3></span>
-									<h2><a href="tel://17606931104" target="_self"><img src="tel.png" width="127" height="128" alt=""></a><a href=" http://wpa.qq.com/msgrd?v=3&uin=757695967&site=qq&menu=yes" target="_self"><img src="QQ.jpg" width="130" height="128" alt=""></a><a href="sms://17606931104" target="_self"><img src="chat.png" width="130" height="128" alt=""></a><a href="https://space.bilibili.com/441823696" target="_self"><img src="bi.jpg" width="130" height="128" alt=""></a></h2>
+									<h2><a href="tel://17606931104" target="_self"><img src="tel.png" width="127" height="128" alt=""></a><a href=" https://qm.qq.com/cgi-bin/qm/qr?k=ECr5ywHacXI9htiK_RdEWLkrJlQRoZsv&noverify=0" target="_self"><img src="QQ.jpg" width="130" height="128" alt=""></a><a href="sms://17606931104" target="_self"><img src="chat.png" width="130" height="128" alt=""></a><a href="https://mp.weixin.qq.com/s/SfQm_JxhBlmA0_uH6elCAg" target="_self"><img src="WX.jpg" width="130" height="128" alt=""></a></h2>
 									<h2>&nbsp;</h2>
 									
 
